--- a/DockerfileExercicio
+++ b/DockerfileExercicio
@@ -4,6 +4,6 @@ apt-get install -y nginx && \
 rm -rf /var/lib/apt/lists/*
 RUN ln -sf /dev/stdout /var/log/nginx/access.log
 RUN ln -sf /dev/stderr /var/log/nginx/error.log
-RUN echo "<h1>Curso Docker V2</h1>" > /usr/share/nginx/www/index.html
+RUN echo "<h1>Curso 6Docker V2</h1>" > /usr/share/nginx/www/index.html
 EXPOSE 80 443
 CMD ["nginx", "-g", "daemon off;"]
